change .local to .github.io

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Hämäläinen hieronta</title>
-	<atom:link href="https://hamalainenhieronta.local/feed/" rel="self" type="application/rss+xml" />
-	<link>https://hamalainenhieronta.local</link>
+	<atom:link href="https://hamalainenhieronta.github.io/feed/" rel="self" type="application/rss+xml" />
+	<link>https://hamalainenhieronta.github.io</link>
 	<description></description>
 	<lastBuildDate>Mon, 22 Jan 2024 11:05:35 +0000</lastBuildDate>
 	<language>fi</language>
