--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -3,13 +3,13 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 	>
 <channel>
 	<title>
 	Sivuston Hämäläinen hieronta kommentit	</title>
-	<atom:link href="https://hamalainenhieronta.local/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://hamalainenhieronta.local</link>
+	<atom:link href="https://hamalainenhieronta.github.io/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://hamalainenhieronta.github.io</link>
 	<description></description>
 	<lastBuildDate>Mon, 22 Jan 2024 11:05:35 +0000</lastBuildDate>
 	<sy:updatePeriod>
