--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 <link rel="alternate" title="oEmbed (JSON)" type="application/json+oembed" href="wp-json/oembed/1.0/embedcf5b.json?url=https%3A%2F%2Fhamalainenhieronta.github.io%2F" />
 <link rel="alternate" title="oEmbed (XML)" type="text/xml+oembed" href="wp-json/oembed/1.0/embed399e?url=https%3A%2F%2Fhamalainenhieronta.github.io%2F&amp;format=xml" />
 <script type="importmap" id="wp-importmap">
-{"imports":{"@wordpress\/interactivity":"https:\/\/hamalainenhieronta.github.io\/wp-includes\/js\/dist\/script-modules\/interactivity\/index.min.js?ver=55aebb6e0a16726baffb"}}
+{"imports":{"@wordpress\/interactivity":"https:\/\/hamalainenhieronta.github.io\/wp-includes\/js\/dist\/script-modules\/interactivity\/index.min1c7d.js?ver=55aebb6e0a16726baffb"}}
 </script>
 <script type="module" src="wp-includes/js/dist/script-modules/block-library/navigation/view.minf3d8.js?ver=61572d447d60c0aa5240" id="@wordpress/block-library/navigation/view-js-module"></script>
 <link rel="modulepreload" href="wp-includes/js/dist/script-modules/interactivity/index.min1c7d.js?ver=55aebb6e0a16726baffb" id="@wordpress/interactivity-js-modulepreload"><style class='wp-fonts-local'>
